--- a/style.css
+++ b/style.css
@@ -1,41 +1,39 @@
-body{
+body {
   margin: 0;
   padding: 0;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0, 0, 0, 0.1);
   font-family: Lato, sans-serif;
 }
 
-.header{
+.header {
   max-height: 5em;
   background-color: #fff;
-  width:100%;
+  width: 100%;
   padding: 0.5em;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.navbar{
-  
-  display:flex;
+.navbar {
+  display: flex;
   justify-content: space-between;
   align-items: center;
-  margin:0 1em;
-
+  margin: 0 1em;
 }
 
-.logo{
-  width:80px;
+.logo {
+  width: 80px;
 }
 
-img{
-  height:100%;
+img {
+  height: 100%;
 }
-#nav-items{
+#nav-items {
   display: flex;
   align-items: center;
 }
 
 #nav-items a {
-  color:black;
+  color: black;
   padding: 16px;
   text-decoration: none;
 }
@@ -45,7 +43,7 @@ img{
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;  
+  font-size: 16px;
   border: none;
   outline: none;
   padding: 14px 15px;
@@ -55,12 +53,12 @@ img{
   width: 100%;
   display: flex;
 }
-.dropdown-icon{
-      margin-left: 4px;
+.dropdown-icon {
+  margin-left: 4px;
 }
 
 .dropdown-content {
-  padding-top:1em;
+  padding-top: 1em;
   display: none;
   position: absolute;
   background-color: #fff;
@@ -73,31 +71,124 @@ img{
   display: block;
 }
 
-.dropbtn span{
-  color:rgba(0, 0, 0, 0.4);
+.dropbtn span {
+  color: rgba(0, 0, 0, 0.4);
 }
 
-.dropdown-content a:hover, #nav-items a:hover,  
+.dropdown-content a:hover,
+#nav-items a:hover,
 .dropbtn:hover,
-.dropbtn:hover span{
-  color:#f06324;
+.dropbtn:hover span {
+  color: #f06324;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-#nav-items .cta-button{
-    background-color: #f06324;
-    border-radius: 2px;
-    color: #fff;
-    margin:10px;
-    padding-top:10px;
-    padding-bottom:10px;
+#nav-items .cta-button {
+  background-color: #f06324;
+  border-radius: 2px;
+  color: #fff;
+  margin: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-#nav-items .cta-button:hover{
-    background-color: #f48657;
-    color: #fff;
+#nav-items .cta-button:hover {
+  background-color: #f48657;
+  color: #fff;
 }
 
+.mobile {
+  position: absolute;
+  right: 1.5em;
+  display: none;
+}
 
+#menu-icon {
+  padding-right: 1.2em;
+  cursor: pointer;
+}
+
+.hamburger {
+  position: absolute;
+  width: 1em;
+  height: 0.55em;
+  margin-top: 2.1em;
+  border-top: 2.5px solid rgb(47, 47, 47);
+  border-bottom: 2.5px solid rgb(47, 47, 47);
+}
+
+.hamburger:before {
+  content: '';
+  position: absolute;
+  top: 3px;
+  width: 100%;
+  border-top: 2.5px solid rgb(47, 47, 47);
+}
+
+a.mobile-btn {
+  background-color: #f06324;
+  border-radius: 2px;
+  color: #fff;
+  margin: 1.3em 1.5em 1.3em 1em;
+  padding: 10px 0;
+  width: 7em;
+  text-align: center;
+  text-decoration: none;
+}
+a.mobile-btn:hover {
+  background-color: #f48657;
+  color: #fff;
+}
+
+@media only screen and (max-width: 800px) {
+  .mobile {
+    display: flex;
+  }
+
+  .header {
+    padding: 0;
+  }
+
+  .navbar {
+    display: initial;
+  }
+  #nav-items {
+    margin-top: 1.3em;
+    background-color: white;
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 1em;
+  }
+
+  .logo {
+    margin-left: 1em;
+  }
+
+  .dropdown {
+    width: 100%;
+  }
+
+  #nav-items a {
+    display: block;
+  }
+
+  #nav-items a:first-child {
+    width: 100%;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: contents;
+  }
+  .dropdown:hover {
+    position: relative;
+    -webkit-box-shadow: 6px 2px 3px -2px rgba(0, 0, 0, 0.2);
+    box-shadow: 6px 2px 3px -2px rgba(0, 0, 0, 0.2);
+  }
+
+  .dropdown-content a {
+    padding-left: 35px;
+  }
+}
